partials section not working

--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,11 @@ a:link {
   justify-content: center;
   width: 100%; }
 
+#partials-section {
+  display: flex;
+  justify-content: center;
+  width: 100%; }
+
 /* --------------------------------------------------------------------- */
 /* Modulation Section */
 /* --------------------------------------------------------------------- */
