--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,18 @@ a:link {
   margin-bottom: 1rem; }
 
 /* --------------------------------------------------------------------- */
+/* MIDI Display */
+/* --------------------------------------------------------------------- */
+#midi-display {
+  width: 300px;
+  height: 150px;
+  padding: 1rem;
+  background: #f0f0f3;
+  color: #333333;
+  font-size: 0.9rem;
+  line-height: 1.4rem; }
+
+/* --------------------------------------------------------------------- */
 /* Synth Section */
 /* --------------------------------------------------------------------- */
 #synth-section {
@@ -241,27 +253,37 @@ a:link {
     color: #febc2c; }
 
 /* --------------------------------------------------------------------- */
+/* Extra Controls (Presets, Sequencer etc.) */
+/* --------------------------------------------------------------------- */
+#extras {
+  grid-column: 1 / 4;
+  grid-row: 3;
+  margin-top: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly; }
+  #extras button {
+    border: 0;
+    background: #f0f0f3;
+    color: #b4b4b4;
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.9rem;
+    margin: 0 0.5rem;
+    font-weight: 500;
+    cursor: pointer;
+    text-align: center; }
+
+/* --------------------------------------------------------------------- */
 /* Keyboard */
 /* --------------------------------------------------------------------- */
 #keyboard {
   grid-column: 1 / 4;
-  grid-row: 3;
+  grid-row: 4;
   margin: 0 auto;
-  margin-top: 2rem;
+  margin-top: 1rem;
   position: relative;
   z-index: 0; }
-
-/* --------------------------------------------------------------------- */
-/* MIDI Display */
-/* --------------------------------------------------------------------- */
-#midi-display {
-  width: 300px;
-  height: 150px;
-  padding: 1rem;
-  background: #f0f0f3;
-  color: #333333;
-  font-size: 0.9rem;
-  line-height: 1.4rem; }
 
 /* --------------------------------------------------------------------- */
 /* Footer */
