--- a/scss/style.scss
+++ b/scss/style.scss
@@ -383,6 +383,46 @@ a:link {
   flex-direction: column;
 }
 
+#frequency-delay-content {
+
+}
+
+#ping-pong-delay-content {
+
+}
+
+#chorus-content {
+
+}
+
+#reverb-content {
+  
+}
+
+#tremolo-content {
+  
+}
+
+#vibrato-content {
+  
+}
+
+#distortion-content {
+  
+}
+
+#frequency-shifter-content {
+  
+}
+
+#bit-crusher-content {
+  
+}
+
+#chebyshev-content {
+  
+}
+
 /* --------------------------------------------------------------------- */
 /* Extra Controls (Presets, Sequencer etc.) */
 /* --------------------------------------------------------------------- */
@@ -713,4 +753,6 @@ a:link {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+
+  
 }
