--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,6 +48,7 @@ html,
 body {
   font-family: "Spartan", sans-serif;
   // overflow: hidden; /* Hide scrollbars */
+  font-size: 90%;
 }
 
 ::-moz-selection {
@@ -754,5 +755,5 @@ a:link {
     grid-template-columns: 1fr 1fr;
   }
 
-  
+
 }
