--- a/scss/style.scss
+++ b/scss/style.scss
@@ -307,7 +307,7 @@ a:link {
 /* --------------------------------------------------------------------- */
 /* Modulation Section */
 /* --------------------------------------------------------------------- */
-#modulation {
+#modulation-section {
   grid-column: 2 /3;
   grid-row: 2;
   .title {
