responsive effects grid

--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,38 @@ a:link {
 #nav-container:focus-within #nav-content {
   transform: none; }
 
-@media only screen and (min-width: 1900px) {
+@media only screen and (min-width: 1600px) {
   #effects-content {
     display: grid;
-    grid-template-columns: 1fr 1fr; } }
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr; }
+  #filters {
+    grid-column: 1 / 2;
+    grid-row: 1; }
+  #delay {
+    grid-column: 2 / 3;
+    grid-row: 1; }
+  #chorus {
+    grid-column: 1 / 2;
+    grid-row: 2; }
+  #reverb {
+    grid-column: 2 / 3;
+    grid-row: 2; }
+  #tremolo {
+    grid-column: 1 / 2;
+    grid-row: 3; }
+  #vibrato {
+    grid-column: 2 / 3;
+    grid-row: 3; }
+  #distortion {
+    grid-column: 1 / 2;
+    grid-row: 4; }
+  #frequency-shifter {
+    grid-column: 2 / 3;
+    grid-row: 4; }
+  #bit-crusher {
+    grid-column: 1 / 2;
+    grid-row: 5; }
+  #chebyshev {
+    grid-column: 2 / 3;
+    grid-row: 5; } }
