--- a/css/style.css
+++ b/css/style.css
@@ -506,17 +506,18 @@ a:link {
 #nav-container:focus-within #nav-content {
   transform: none; }
 
-@media only screen and (min-width: 1600px) {
+@media only screen and (min-width: 1500px) {
   #effects-content {
     display: grid;
-    gap: 2rem;
+    column-gap: 2rem;
     grid-template-columns: 1fr 1fr; }
   #filters {
     grid-column: 1 / 2;
     grid-row: 1; }
   #delay {
     grid-column: 2 / 3;
-    grid-row: 1; }
+    grid-row: 1;
+    height: fit-content; }
   #chorus {
     grid-column: 1 / 2;
     grid-row: 2; }
@@ -541,3 +542,79 @@ a:link {
   #chebyshev {
     grid-column: 2 / 3;
     grid-row: 5; } }
+
+@media only screen and (min-width: 1700px) {
+  #effects-content {
+    display: grid;
+    column-gap: 2rem;
+    grid-template-columns: repeat(3, 1fr); }
+  #filters {
+    grid-column: 1 / 2;
+    grid-row: 1; }
+  #delay {
+    grid-column: 2 / 3;
+    grid-row: 1;
+    height: fit-content; }
+  #reverb {
+    grid-column: 3 / 4;
+    grid-row: 1; }
+  #chorus {
+    grid-column: 1 / 2;
+    grid-row: 2; }
+  #tremolo {
+    grid-column: 2 / 3;
+    grid-row: 2; }
+  #vibrato {
+    grid-column: 3 / 4;
+    grid-row: 2; }
+  #distortion {
+    grid-column: 1 / 2;
+    grid-row: 3; }
+  #frequency-shifter {
+    white-space: nowrap;
+    grid-column: 2 / 3;
+    grid-row: 3; }
+  #bit-crusher {
+    grid-column: 3 / 4;
+    grid-row: 3; }
+  #chebyshev {
+    grid-column: 1 / 2;
+    grid-row: 4; } }
+
+@media only screen and (min-width: 1900px) {
+  #effects-content {
+    display: grid;
+    column-gap: 2rem;
+    grid-template-columns: repeat(4, 1fr); }
+  #filters {
+    grid-column: 1 / 2;
+    grid-row: 1; }
+  #delay {
+    grid-column: 2 / 3;
+    grid-row: 1;
+    height: fit-content; }
+  #reverb {
+    grid-column: 3 / 4;
+    grid-row: 1; }
+  #chorus {
+    grid-column: 4 / 5;
+    grid-row: 1; }
+  #tremolo {
+    grid-column: 1 / 2;
+    grid-row: 2; }
+  #vibrato {
+    grid-column: 2 / 3;
+    grid-row: 2; }
+  #distortion {
+    grid-column: 3 / 4;
+    grid-row: 2; }
+  #frequency-shifter {
+    white-space: nowrap;
+    grid-column: 4 / 5;
+    grid-row: 2; }
+  #bit-crusher {
+    grid-column: 1 / 2;
+    grid-row: 3; }
+  #chebyshev {
+    grid-column: 2 / 3;
+    grid-row: 3; } }
