--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,33 @@ a:link {
   color: inherit; }
 
 /* --------------------------------------------------------------------- */
+/* Splash Screen */
+/* --------------------------------------------------------------------- */
+#splash-screen {
+  width: 99vw;
+  height: 99vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform;
+  animation: jssmove 1s linear infinite; }
+
+@keyframes jssmove {
+  0% {
+    transform: perspective(600px) translateZ(0px); }
+  30% {
+    transform: perspective(600px) translateZ(10px); }
+  50% {
+    transform: perspective(600px) translateZ(20px); }
+  80% {
+    transform: perspective(600px) translateZ(10px); }
+  100% {
+    transform: perspective(600px) translateZ(0px); } }
+
+#page-container {
+  display: none; }
+
+/* --------------------------------------------------------------------- */
 /* Dark Mode */
 /* --------------------------------------------------------------------- */
 .dark-mode {
@@ -67,10 +94,6 @@ a:link {
   background-size: 200px;
   background-repeat: no-repeat;
   color: white; }
-
-#loader {
-  background: url("../assets/logo/logo512.png");
-  background-repeat: none; }
 
 /* --------------------------------------------------------------------- */
 /* Header */
