--- a/scss/style.scss
+++ b/scss/style.scss
@@ -236,6 +236,11 @@ a:link {
   padding: 0.5rem;
 }
 
+.components {
+  display: flex;
+  flex-direction: row;
+}
+
 /* --------------------------------------------------------------------- */
 /* Panel */
 /* --------------------------------------------------------------------- */
@@ -419,34 +424,86 @@ a:link {
   flex-direction: column;
 }
 
-#frequency-delay-content {
+#feedback-delay-content {
+  @extend #auto-filter-content;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#feedback-delay-toggle {
+  @extend #auto-filter-toggle;
 }
 
 #ping-pong-delay-content {
+  @extend #auto-filter-content;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-#chorus-content {
+#ping-pong-delay-toggle {
+  @extend #auto-filter-toggle;
 }
 
 #reverb-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#chorus-content {
+  @extend #auto-filter-content;
+}
+
+#chorus-toggle {
+  @extend #auto-filter-toggle;
 }
 
 #tremolo-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#tremolo-components {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
 }
 
 #vibrato-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#vibrato-components {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+}
+
+#phaser-content {
+  @extend #auto-filter-content;
+}
+
+#phaser-toggle {
+  @extend #auto-filter-toggle;
 }
 
 #distortion-content {
+  @extend #reverb-content;
 }
 
-#frequency-shifter-content {
+#freq-shifter-content {
+  @extend #reverb-content;
 }
 
 #bit-crusher-content {
+  @extend #reverb-content;
 }
 
 #chebyshev-content {
+  @extend #reverb-content;
 }
 
 /* --------------------------------------------------------------------- */
@@ -774,6 +831,9 @@ a:link {
   transform: none;
 }
 
+/* --------------------------------------------------------------------- */
+/* Menu */
+/* --------------------------------------------------------------------- */
 @media only screen and (min-width: 1500px) {
   #effects-content {
     display: grid;
